fix bg on help articles on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -185,6 +185,11 @@ cite,
 .bg-dark {
 	background-color: #292929 !important;
 }
+@media (max-width: 767px) {
+	.no-md-bg {
+		background-image: none !important;
+	}
+}
 [class*="border-"] {
 	border-color: #EAEAEA !important;
 }
